test more infra

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ sudo: required
 services:
 - docker
 language: go
-go:
-  - "1.11.x"
 
 install:
 # This script is used by the Travis build to install a cookie for
@@ -21,9 +19,25 @@ script:
 branches:
   only:
   - master
+
 matrix:
   fast_finish: true
   allow_failures:
   - go: tip
-env:
-  - GOFLAGS=-mod=vendor GO111MODULE=on
+  include:
+  - go: "1.11.x"
+    env: GOFLAGS=-mod=vendor GO111MODULE=on
+  - go: "1.12.x"
+    env: GOFLAGS=-mod=vendor GO111MODULE=on
+  - go: "1.13.x"
+    env: GOFLAGS=-mod=vendor
+  - go: "tip"
+    env: GOFLAGS=-mod=vendor
+  - go: "1.13.x"
+    env: GOFLAGS=-mod=vendor GOARCH=arm
+    script:
+      - make build
+  - go: "1.13.x"
+    env: GOFLAGS=-mod=vendor GOARCH=amd64
+    script:
+      - make build
