test: add test job for Go 1.14

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ matrix:
     env: GOFLAGS=-mod=vendor GO111MODULE=on
   - go: "1.13.x"
     env: GOFLAGS=-mod=vendor
+  - go: "1.14.x"
+    env: GOFLAGS=-mod=vendor
   - go: "tip"
     env: GOFLAGS=-mod=vendor
   - go: "1.13.x"
