--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,11 @@ matrix:
     env: GOFLAGS=-mod=vendor GOARCH=amd64
     script:
       - make build
+  - go: "1.14.x"
+    env: GOFLAGS=-mod=vendor GOARCH=arm
+    script:
+      - make build
+  - go: "1.14.x"
+    env: GOFLAGS=-mod=vendor GOARCH=amd64
+    script:
+      - make build
