--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -22,3 +22,6 @@ jobs:
         env:
           TF_LOG: DEBUG
           TF_ACC: 1
+          SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
+          SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
+          SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
