--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,10 @@
 # in `goreleaser` to indicate this is being used in a non-interactive mode.
 #
 name: release
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*'
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -27,7 +30,8 @@ jobs:
         with:
           go-version: 1.14
 
-      - name: Import GPG key
+      -
+        name: Import GPG key
         id: import_gpg
         run: |
           gpg-agent --daemon --allow-preset-passphrase
