--- a/.travis.yml
+++ b/.travis.yml
@@ -24,17 +24,13 @@ matrix:
   allow_failures:
   - go: tip
   include:
-  - go: "1.12.x"
-    env: GOFLAGS=-mod=vendor GO111MODULE=on
-  - go: "1.13.x"
-    env: GOFLAGS=-mod=vendor
   - go: "tip"
-    env: GOFLAGS=-mod=vendor
-  - go: "1.13.x"
-    env: GOFLAGS=-mod=vendor GOARCH=arm
+  - go: "1.14.x"
+  - go: "1.15.x"
+    env: GOARCH=arm
     script:
       - make build
-  - go: "1.13.x"
-    env: GOFLAGS=-mod=vendor GOARCH=amd64
+  - go: "1.15.x"
+    env: GOARCH=amd64
     script:
       - make build
