--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -7,6 +7,17 @@ on:
 
 jobs:
   nightly:
+    strategy:
+      matrix:
+        products:
+          - Account
+          - Baremetal
+#          - Instance
+#          - K8S
+#          - Lb
+          - Object
+          - Rdb
+          - Registry
     runs-on: ubuntu-latest
     steps:
       - name: Install Go
@@ -18,10 +29,11 @@ jobs:
         with:
           fetch-depth: 2
       - name: Acceptance Tests
-        run: go test -v ./...
+        run: go test -v ./... -timeout=1h -run TestAccScaleway${{ matrix.products }}*
         env:
           TF_LOG: DEBUG
           TF_ACC: 1
+          SCW_DEBUG: 1
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
           SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
           SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
