--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,10 +34,10 @@ jobs:
         id: import_gpg
         run: |
           gpg-agent --daemon --allow-preset-passphrase
-          gpg --batch --import --yes <(echo "${{ secrets.GPG_PRIVATE_KEY }}")
+          gpg --batch --import --yes <(echo '${{ secrets.GPG_PRIVATE_KEY }}')
           export KEY_FINGERPRINT=$(gpg --list-secret-keys --with-colons | grep sec | cut -d ':' -f 5)
           export KEY_GRIP=$(gpg-connect-agent 'KEYINFO --list' /bye | grep KEYINFO | cut -d ' ' -f 3)
-          export PASSPHRASE_HEX=$(echo -n "${{ secrets.GPG_PASSPHRASE }}" | xxd -p -u -c 265)
+          export PASSPHRASE_HEX=$(echo -n '${{ secrets.GPG_PASSPHRASE }}' | xxd -p -u -c 265)
           gpg-connect-agent "PRESET_PASSPHRASE $KEY_GRIP -1 $PASSPHRASE_HEX" /bye
           echo "::set-output name=fingerprint::$KEY_FINGERPRINT"
       -
