--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -12,9 +12,9 @@ jobs:
         products:
           - Account
           - Baremetal
-#          - Instance
-#          - K8S
-#          - Lb
+          - Instance
+          - K8S
+          - Lb
           - Object
           - Rdb
           - Registry
