--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -39,6 +39,14 @@ jobs:
           SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
           SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
+
+  # sweeper needs to run after nightly completed
+  # no matter what are the results of the jobs
+  sweeper:
+    runs-on: ubuntu-latest
+    needs: nightly
+    if: always()
+    steps:
       - name: Run sweepers
         run: make sweep
         env:
