--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -47,6 +47,12 @@ jobs:
     needs: nightly
     if: always()
     steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.15.1
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Run sweepers
         run: make sweep
         env:
