--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -39,6 +39,20 @@ jobs:
           SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
           SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
+
+  # sweeper needs to run after nightly completed
+  # no matter what are the results of the jobs
+  sweeper:
+    runs-on: ubuntu-latest
+    needs: nightly
+    if: always()
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.15.1
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Run sweepers
         run: make sweep
         env:
