--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,7 +13,7 @@ builds:
   flags:
     - -trimpath
   ldflags:
-    - '-s -w -X github.com/scaleway/terraform-provider-scaleway/scaleway.version={{.Version}}'
+    - '-s -w -X github.com/scaleway/terraform-provider-scaleway/scaleway.Version={{.Version}}'
   goos:
     - freebsd
     - windows
