--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run Acceptance Tests
-        run: go test -v ./... -timeout=1h -run TestAccScaleway(DataSource)?${{ matrix.products }}*
+        run: go test -v ./... -timeout=1h -run "TestAccScaleway(DataSource)?${{ matrix.products }}.*"
         env:
           TF_LOG: DEBUG
           # https://www.terraform.io/docs/extend/testing/acceptance-tests/index.html#running-acceptance-tests
