--- a/scaleway/testdata/instance-server-enterprise.cassette.yaml
+++ b/scaleway/testdata/instance-server-enterprise.cassette.yaml
@@ -845,8 +845,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:22.561799+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": null, "maintenances": [], "allowed_actions":
@@ -862,7 +862,7 @@ interactions:
       Date:
       - Tue, 20 Apr 2021 14:31:22 GMT
       Location:
-      - https://srr1-cp-prd-api02.internal.scaleway.com/servers/c7828e58-048e-4743-b42b-e07456899a50
+      - https://par1-cp-prd-api02.internal.scaleway.com/servers/c7828e58-048e-4743-b42b-e07456899a50
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -908,8 +908,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:22.561799+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": null, "maintenances": [], "allowed_actions":
@@ -1009,8 +1009,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:23.115765+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": null, "maintenances": [], "allowed_actions":
@@ -1070,8 +1070,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:23.115765+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1132,8 +1132,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:23.115765+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1194,8 +1194,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:38.724096+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1256,8 +1256,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:38.724096+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1351,8 +1351,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:38.724096+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1413,8 +1413,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:38.724096+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1508,8 +1508,8 @@ interactions:
       "modification_date": "2021-04-20T14:31:38.724096+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1610,8 +1610,8 @@ interactions:
       "modification_date": "2021-04-20T14:32:17.290422+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1672,8 +1672,8 @@ interactions:
       "modification_date": "2021-04-20T14:32:17.290422+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1734,8 +1734,8 @@ interactions:
       "modification_date": "2021-04-20T14:32:17.290422+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1796,8 +1796,8 @@ interactions:
       "modification_date": "2021-04-20T14:32:17.290422+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1858,8 +1858,8 @@ interactions:
       "modification_date": "2021-04-20T14:32:17.290422+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": {"zone_id": "fr-par-1", "platform_id":
@@ -1920,8 +1920,8 @@ interactions:
       "modification_date": "2021-04-20T14:32:39.075541+00:00", "bootscript": {"id":
       "9246a9bb-896c-464c-b6bd-b7443cd72c23", "public": true, "title": "x86_64 mainline
       4.4.182 rev1", "architecture": "x86_64", "organization": "11111111-1111-4111-8111-111111111111",
-      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
-      "dtb": "", "initrd": "https://s3.fr-srr.scw.cloud/scw-srr1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
+      "project": "11111111-1111-4111-8111-111111111111", "kernel": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/kernel/x86_64-mainline-lts-4.4-4.4.182-rev1/vmlinuz-4.4.182",
+      "dtb": "", "initrd": "https://s3.fr-par.scw.cloud/scw-par1-bootscripts01/initrd/initrd-Linux-x86_64-v3.14.6.gz",
       "bootcmdargs": "LINUX_COMMON scaleway boot=local nbd.max_part=16", "default":
       true, "zone": "fr-par-1"}, "security_group": {"id": "9d8a7041-9bc6-4f3a-ba96-3ae818865fba",
       "name": "Default security group"}, "location": null, "maintenances": [], "allowed_actions":
