feat: update cassette

--- a/scaleway/testdata/lbip-basic.cassette.yaml
+++ b/scaleway/testdata/lbip-basic.cassette.yaml
@@ -2,27 +2,27 @@
 version: 1
 interactions:
 - request:
-    body: '{"project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","reverse":null}'
+    body: '{"project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","reverse":null}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"51-159-75-140.lb.fr-par.scw.cloud","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"51-159-24-101.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "260"
+      - "278"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:45 GMT
+      - Tue, 11 May 2021 16:04:43 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 6b3c3f7b-0632-4455-b55f-a79fef7a9924
+      - a9a14c6d-1d1d-4d07-ae25-90b84b522102
     status: 200 OK
     code: 200
     duration: ""
@@ -41,21 +41,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"51-159-75-140.lb.fr-par.scw.cloud","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"51-159-24-101.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "260"
+      - "278"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:46 GMT
+      - Tue, 11 May 2021 16:04:43 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b08a669d-cedc-4023-9fe5-58eed6c1578e
+      - aa0c1d3b-2a57-41e3-9615-3aee5072e8ca
     status: 200 OK
     code: 200
     duration: ""
@@ -74,21 +74,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"51-159-75-140.lb.fr-par.scw.cloud","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"51-159-24-101.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "260"
+      - "278"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:46 GMT
+      - Tue, 11 May 2021 16:04:43 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7d73f60d-db78-4b3e-8259-d16fc0265968
+      - ca50d149-a0f4-4f6b-986c-14cf6a132b71
     status: 200 OK
     code: 200
     duration: ""
@@ -107,21 +107,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"51-159-75-140.lb.fr-par.scw.cloud","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"51-159-24-101.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "260"
+      - "278"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:46 GMT
+      - Tue, 11 May 2021 16:04:44 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7cace864-7eea-4055-994e-d66f80f0bc2c
+      - 0a63487a-895e-487d-88e4-b10367b5a390
     status: 200 OK
     code: 200
     duration: ""
@@ -140,21 +140,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"51-159-75-140.lb.fr-par.scw.cloud","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"51-159-24-101.lb.fr-par.scw.cloud","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "260"
+      - "278"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:47 GMT
+      - Tue, 11 May 2021 16:04:44 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -164,7 +164,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 96f88d98-38d0-4269-860b-bb5d0ad6a4e7
+      - eb4119d9-089c-4a25-8159-b8c3817379d9
     status: 200 OK
     code: 200
     duration: ""
@@ -175,21 +175,21 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: PATCH
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"myreverse.com","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"myreverse.com","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "240"
+      - "258"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:48 GMT
+      - Tue, 11 May 2021 16:04:45 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -199,7 +199,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3789f65e-4918-4cba-ae9d-b3109e896d20
+      - 72dccd03-a1d6-41ff-a3a8-43b1b9f44ebd
     status: 200 OK
     code: 200
     duration: ""
@@ -208,21 +208,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"myreverse.com","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"myreverse.com","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "240"
+      - "258"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:48 GMT
+      - Tue, 11 May 2021 16:04:45 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -232,7 +232,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f1b0f76b-9aa7-4847-8c8a-03103b7cb0f2
+      - b784f33b-1bb7-434e-a7a7-59ac09aa4f62
     status: 200 OK
     code: 200
     duration: ""
@@ -241,21 +241,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"myreverse.com","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"myreverse.com","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "240"
+      - "258"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:48 GMT
+      - Tue, 11 May 2021 16:04:45 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -265,7 +265,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9c6fd272-47e0-42f6-bec8-864f3dc39769
+      - 4c53190f-f487-442d-af89-fff4e1c745bc
     status: 200 OK
     code: 200
     duration: ""
@@ -274,21 +274,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: GET
   response:
-    body: '{"id":"a48b0404-d757-463b-b5ed-209ae80c11e6","ip_address":"51.159.75.140","organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","lb_id":null,"reverse":"myreverse.com","region":"fr-par"}'
+    body: '{"id":"bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a","ip_address":"51.159.24.101","organization_id":"63a66ec9-a385-4194-bc15-04aa6921274a","project_id":"63a66ec9-a385-4194-bc15-04aa6921274a","lb_id":null,"reverse":"myreverse.com","region":"fr-par","zone":"fr-par-1"}'
     headers:
       Content-Length:
-      - "240"
+      - "258"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:49 GMT
+      - Tue, 11 May 2021 16:04:46 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -298,7 +298,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 8ebcb973-df53-463b-94cc-9a303a5e24a9
+      - 257c26d5-e03b-4891-b522-cdee910a9001
     status: 200 OK
     code: 200
     duration: ""
@@ -307,9 +307,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.2; darwin; amd64) terraform-provider/develop-tftest
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/lb/v1/regions/fr-par/ips/a48b0404-d757-463b-b5ed-209ae80c11e6
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
     method: DELETE
   response:
     body: ""
@@ -319,7 +319,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Oct 2020 15:01:49 GMT
+      - Tue, 11 May 2021 16:04:47 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -329,7 +329,40 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - cf895c5a-aa7e-457f-9934-b539e75e5d3b
+      - 4181c9a8-edb3-4e9a-ad91-df86a119e3bf
     status: 204 No Content
     code: 204
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/lb/v1/zones/fr-par-1/ips/bb6fb603-3bd3-4a9e-a6b3-6a5a67f2f50a
+    method: GET
+  response:
+    body: '{"message":"ips not Found"}'
+    headers:
+      Content-Length:
+      - "27"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Tue, 11 May 2021 16:04:47 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - cd4239b8-32e0-4cef-96d2-c2818fbfd78e
+    status: 404 Not Found
+    code: 404
     duration: ""
