ci(nightly): Some products are not tested

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -12,10 +12,13 @@ jobs:
       matrix:
         products:
           - Account
+          - AppleSilicon
           - Baremetal
           - Instance
+          - Iot
           - K8S
           - Lb
+          - Marketplace
           - Object
           - Rdb
           - Registry
