feat: add unittest and upgrade keys schema resource

--- a/scaleway/testdata/data-source-marketplace-image-basic.cassette.yaml
+++ b/scaleway/testdata/data-source-marketplace-image-basic.cassette.yaml
@@ -6,7 +6,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/marketplace/v1/images?page=1
     method: GET
@@ -890,7 +890,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 14:04:07 GMT
+      - Fri, 14 May 2021 16:10:11 GMT
       Link:
       - </images?page=1&per_page=50&>; rel="last"
       Server:
@@ -902,7 +902,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f38793db-79be-4746-b760-62f3acee53c1
+      - 1b4ca583-b7f3-4ea4-a8fa-e125497a0037
       X-Total-Count:
       - "33"
     status: 200 OK
@@ -913,7 +913,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/marketplace/v1/images?page=1
     method: GET
@@ -1797,7 +1797,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 14:04:08 GMT
+      - Fri, 14 May 2021 16:10:12 GMT
       Link:
       - </images?page=1&per_page=50&>; rel="last"
       Server:
@@ -1809,7 +1809,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b81c9f9f-939b-4a83-a533-754536a5203f
+      - a3204fde-ac7c-4fb2-b38b-19501df911d3
       X-Total-Count:
       - "33"
     status: 200 OK
@@ -1820,7 +1820,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.15.11; linux; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.16.3; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/16152446-99ed-4795-9d3f-87ec2f5b891d
     method: GET
@@ -1841,7 +1841,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 12 May 2021 14:04:08 GMT
+      - Fri, 14 May 2021 16:10:12 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
